Modify cron schedule for Facebook posts
Updated cron schedule times for posting.

--- a/.github/workflows/post-to-facebook.yml
+++ b/.github/workflows/post-to-facebook.yml
@@ -20,11 +20,13 @@ on:
   schedule:
     # يمكنك تعديل هذه الأوقات حسب رغبتك
     # الصباح: 8 صباحاً UTC
-    - cron: '11 17 * * *'
+    - cron: '20 17 * * *'
     # الظهر: 1 ظهراً UTC
-    - cron: '13 17 * * *'
+    - cron: '22 17 * * *'
     # المساء: 6 مساءً UTC
-    - cron: '15 17 * * *'
+    - cron: '24 17 * * *'
+permissions:
+  contents: write  # صلاحية الكتابة على الملفات
 
 jobs:
   manage_post:
