--- a/.github/workflows/post-to-facebook.yml
+++ b/.github/workflows/post-to-facebook.yml
@@ -20,11 +20,11 @@ on:
   schedule:
     # يمكنك تعديل هذه الأوقات حسب رغبتك
     # الصباح: 8 صباحاً UTC
-    - cron: '40 17 * * *'
+    - cron: '53 17 * * *'
     # الظهر: 1 ظهراً UTC
-    - cron: '45 17 * * *'
+    - cron: '55 17 * * *'
     # المساء: 6 مساءً UTC
-    - cron: '50 17 * * *'
+    - cron: '00 18 * * *'
 permissions:
   contents: write  # صلاحية الكتابة على الملفات
 
@@ -69,7 +69,7 @@ jobs:
         # تحديد الإجراء
         if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
           ACTION="${{ github.event.inputs.action }}"
-          echo "🖱️ تشغيل يدوي - الإجراء: $ACTION"
+          echo "🖱️ تشغيل يدوي - الإجراء المطلوب: $ACTION"
         else
           # التحقق من وجود منشور اليوم
           TODAY_POST=$(jq -r --arg today "$TODAY" \
@@ -95,6 +95,11 @@ jobs:
         if [ -n "$POST_ID" ] && [ "$POST_ID" != "null" ]; then
           echo "existing_post_id=$POST_ID" >> $GITHUB_OUTPUT
           echo "🆔 Post ID الموجود: $POST_ID"
+        else
+          echo "existing_post_id=" >> $GITHUB_OUTPUT
+          if [ "$ACTION" == "update" ]; then
+            echo "⚠️ لا يوجد منشور للتعديل - سيتم إنشاء منشور جديد"
+          fi
         fi
     
     - name: اختيار ملف المنشور
@@ -199,128 +204,142 @@ jobs:
         cat /tmp/post_content.txt
         echo "━━━━━━━━━━━━━━━━━━━━━━━━"
     
-    - name: نشر منشور جديد
-      if: steps.determine_action.outputs.action == 'publish'
-      id: publish_post
+    - name: نشر أو تعديل المنشور
+      id: publish_or_update
       env:
         FB_PAGE_TOKEN: ${{ secrets.FB_PAGE_TOKEN }}
         FB_PAGE_ID: ${{ secrets.FB_PAGE_ID }}
       run: |
-        echo "📤 جاري النشر..."
-        
+        ACTION="${{ steps.determine_action.outputs.action }}"
+        EXISTING_POST_ID="${{ steps.determine_action.outputs.existing_post_id }}"
         MESSAGE=$(cat /tmp/post_content.txt | jq -sRr @uri)
         HAS_IMAGE="${{ steps.find_image.outputs.has_image }}"
         
-        if [ "$HAS_IMAGE" == "true" ]; then
-          IMAGE_FILE="${{ steps.find_image.outputs.image_file }}"
-          echo "📸 نشر مع صورة: $(basename $IMAGE_FILE)"
-          
-          # رفع الصورة أولاً
-          PHOTO_RESPONSE=$(curl -s -F "source=@$IMAGE_FILE" \
-            -F "access_token=${{ secrets.FB_PAGE_TOKEN }}" \
-            "https://graph.facebook.com/v21.0/${{ secrets.FB_PAGE_ID }}/photos" \
-            -F "published=false")
-          
-          PHOTO_ID=$(echo "$PHOTO_RESPONSE" | jq -r '.id')
-          
-          if [ -z "$PHOTO_ID" ] || [ "$PHOTO_ID" == "null" ]; then
-            echo "⚠️ فشل رفع الصورة، سيتم النشر بدون صورة"
-            echo "$PHOTO_RESPONSE" | jq '.'
-            HAS_IMAGE="false"
-          else
-            echo "✅ تم رفع الصورة: $PHOTO_ID"
-          fi
-        fi
-        
-        # النشر
-        if [ "$HAS_IMAGE" == "true" ]; then
-          # نشر مع صورة
-          RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
-            "https://graph.facebook.com/v21.0/$FB_PAGE_ID/feed" \
-            -d "message=$MESSAGE" \
-            -d "attached_media[0]={\"media_fbid\":\"$PHOTO_ID\"}" \
-            -d "access_token=$FB_PAGE_TOKEN")
+        # تحديد ما إذا كنا سننشر أو نعدل
+        if [ "$ACTION" == "update" ] && [ -z "$EXISTING_POST_ID" ]; then
+          echo "⚠️ لا يوجد منشور للتعديل - سيتم إنشاء منشور جديد بدلاً من ذلك"
+          ACTION="publish"
+          echo "final_action=publish" >> $GITHUB_OUTPUT
         else
-          # نشر نصي فقط
-          RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
-            "https://graph.facebook.com/v21.0/$FB_PAGE_ID/feed" \
-            -d "message=$MESSAGE" \
-            -d "access_token=$FB_PAGE_TOKEN")
+          echo "final_action=$ACTION" >> $GITHUB_OUTPUT
         fi
         
-        HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
-        BODY=$(echo "$RESPONSE" | head -n-1)
-        
-        echo "HTTP Status: $HTTP_CODE"
-        
-        if [ "$HTTP_CODE" -eq 200 ]; then
-          POST_ID=$(echo "$BODY" | jq -r '.id')
+        if [ "$ACTION" == "publish" ]; then
+          echo "📤 جاري النشر..."
           
-          if [ -z "$POST_ID" ] || [ "$POST_ID" == "null" ]; then
-            echo "❌ فشل استخراج Post ID"
+          if [ "$HAS_IMAGE" == "true" ]; then
+            IMAGE_FILE="${{ steps.find_image.outputs.image_file }}"
+            echo "📸 نشر مع صورة: $(basename $IMAGE_FILE)"
+            
+            # رفع الصورة أولاً
+            PHOTO_RESPONSE=$(curl -s -F "source=@$IMAGE_FILE" \
+              -F "access_token=$FB_PAGE_TOKEN" \
+              "https://graph.facebook.com/v21.0/$FB_PAGE_ID/photos" \
+              -F "published=false")
+            
+            PHOTO_ID=$(echo "$PHOTO_RESPONSE" | jq -r '.id')
+            
+            if [ -z "$PHOTO_ID" ] || [ "$PHOTO_ID" == "null" ]; then
+              echo "⚠️ فشل رفع الصورة، سيتم النشر بدون صورة"
+              echo "$PHOTO_RESPONSE" | jq '.'
+              HAS_IMAGE="false"
+            else
+              echo "✅ تم رفع الصورة: $PHOTO_ID"
+            fi
+          fi
+          
+          # النشر
+          if [ "$HAS_IMAGE" == "true" ]; then
+            # نشر مع صورة
+            RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
+              "https://graph.facebook.com/v21.0/$FB_PAGE_ID/feed" \
+              -d "message=$MESSAGE" \
+              -d "attached_media[0]={\"media_fbid\":\"$PHOTO_ID\"}" \
+              -d "access_token=$FB_PAGE_TOKEN")
+          else
+            # نشر نصي فقط
+            RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
+              "https://graph.facebook.com/v21.0/$FB_PAGE_ID/feed" \
+              -d "message=$MESSAGE" \
+              -d "access_token=$FB_PAGE_TOKEN")
+          fi
+          
+          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+          BODY=$(echo "$RESPONSE" | head -n-1)
+          
+          echo "HTTP Status: $HTTP_CODE"
+          
+          if [ "$HTTP_CODE" -eq 200 ]; then
+            POST_ID=$(echo "$BODY" | jq -r '.id')
+            
+            if [ -z "$POST_ID" ] || [ "$POST_ID" == "null" ]; then
+              echo "❌ فشل استخراج Post ID"
+              echo "$BODY" | jq '.'
+              exit 1
+            fi
+            
+            echo "post_id=$POST_ID" >> $GITHUB_OUTPUT
+            echo "✅ تم النشر بنجاح!"
+            echo "🆔 Post ID: $POST_ID"
+          else
+            echo "❌ فشل النشر!"
             echo "$BODY" | jq '.'
             exit 1
           fi
           
-          echo "post_id=$POST_ID" >> $GITHUB_OUTPUT
-          echo "✅ تم النشر بنجاح!"
-          echo "🆔 Post ID: $POST_ID"
         else
-          echo "❌ فشل النشر!"
-          echo "$BODY" | jq '.'
-          exit 1
-        fi
-    
-    - name: تعديل المنشور الموجود
-      if: steps.determine_action.outputs.action == 'update'
-      env:
-        FB_PAGE_TOKEN: ${{ secrets.FB_PAGE_TOKEN }}
-      run: |
-        POST_ID="${{ steps.determine_action.outputs.existing_post_id }}"
-        
-        if [ -z "$POST_ID" ] || [ "$POST_ID" == "null" ]; then
-          echo "❌ خطأ: لا يوجد Post ID للتعديل"
-          exit 1
-        fi
-        
-        echo "🔄 جاري تعديل المنشور: $POST_ID"
-        
-        MESSAGE=$(cat /tmp/post_content.txt | jq -sRr @uri)
-        
-        RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
-          "https://graph.facebook.com/v21.0/$POST_ID" \
-          -d "message=$MESSAGE" \
-          -d "access_token=$FB_PAGE_TOKEN")
-        
-        HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
-        BODY=$(echo "$RESPONSE" | head -n-1)
-        
-        echo "HTTP Status: $HTTP_CODE"
-        
-        if echo "$BODY" | jq -e '.success == true' > /dev/null 2>&1; then
-          UPDATE_COUNT=$(jq --arg today "${{ steps.determine_action.outputs.today }}" \
-            '.posts[] | select(.date == $today) | .updates | length' \
-            data/posts_log.json)
+          # التعديل
+          echo "🔄 جاري تعديل المنشور: $EXISTING_POST_ID"
           
-          echo "✅ تم التعديل بنجاح!"
-          echo "🔢 التعديل رقم: $((UPDATE_COUNT + 1))"
-        else
-          echo "❌ فشل التعديل!"
-          echo "$BODY" | jq '.'
-          exit 1
+          RESPONSE=$(curl -s -w "\n%{http_code}" -X POST \
+            "https://graph.facebook.com/v21.0/$EXISTING_POST_ID" \
+            -d "message=$MESSAGE" \
+            -d "access_token=$FB_PAGE_TOKEN")
+          
+          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+          BODY=$(echo "$RESPONSE" | head -n-1)
+          
+          echo "HTTP Status: $HTTP_CODE"
+          
+          if echo "$BODY" | jq -e '.success == true' > /dev/null 2>&1; then
+            echo "post_id=$EXISTING_POST_ID" >> $GITHUB_OUTPUT
+            
+            UPDATE_COUNT=$(jq --arg today "${{ steps.determine_action.outputs.today }}" \
+              '.posts[] | select(.date == $today) | .updates | length' \
+              data/posts_log.json)
+            
+            echo "✅ تم التعديل بنجاح!"
+            echo "🔢 التعديل رقم: $((UPDATE_COUNT + 1))"
+          else
+            echo "❌ فشل التعديل!"
+            echo "$BODY" | jq '.'
+            exit 1
+          fi
         fi
     
     - name: تحديث السجل
       run: |
         TODAY="${{ steps.determine_action.outputs.today }}"
-        ACTION="${{ steps.determine_action.outputs.action }}"
+        FINAL_ACTION="${{ steps.publish_or_update.outputs.final_action }}"
         POST_FILE="${{ steps.select_post.outputs.post_basename }}"
+        POST_ID="${{ steps.publish_or_update.outputs.post_id }}"
         TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
         CURRENT_TIME="${{ steps.determine_action.outputs.current_time }}"
         HAS_IMAGE="${{ steps.find_image.outputs.has_image }}"
         
-        if [ "$ACTION" == "publish" ]; then
-          POST_ID="${{ steps.publish_post.outputs.post_id }}"
+        if [ "$FINAL_ACTION" == "publish" ]; then
+          # التحقق إذا كان هناك سجل موجود لليوم (في حالة التعديل الفاشل)
+          EXISTING_RECORD=$(jq -r --arg today "$TODAY" \
+            '.posts[] | select(.date == $today) | .post_id' \
+            data/posts_log.json)
+          
+          if [ -n "$EXISTING_RECORD" ] && [ "$EXISTING_RECORD" != "null" ]; then
+            # حذف السجل القديم وإنشاء سجل جديد
+            jq --arg date "$TODAY" \
+              'del(.posts[] | select(.date == $date))' \
+              data/posts_log.json > data/posts_log.tmp
+            mv data/posts_log.tmp data/posts_log.json
+          fi
           
           # إنشاء سجل جديد
           jq --arg date "$TODAY" \
@@ -371,10 +390,10 @@ jobs:
         if git diff --staged --quiet; then
           echo "ℹ️ لا توجد تغييرات"
         else
-          ACTION="${{ steps.determine_action.outputs.action }}"
+          FINAL_ACTION="${{ steps.publish_or_update.outputs.final_action }}"
           TIME="${{ steps.determine_action.outputs.current_time }}"
           
-          if [ "$ACTION" == "publish" ]; then
+          if [ "$FINAL_ACTION" == "publish" ]; then
             MSG="✨ نشر منشور - $TIME UTC"
           else
             MSG="🔄 تعديل منشور - $TIME UTC"
@@ -394,7 +413,8 @@ jobs:
         echo ""
         echo "📅 التاريخ: ${{ steps.determine_action.outputs.today }}"
         echo "⏰ الوقت: ${{ steps.determine_action.outputs.current_time }} UTC"
-        echo "🎬 الإجراء: ${{ steps.determine_action.outputs.action }}"
+        echo "🎬 الإجراء المطلوب: ${{ steps.determine_action.outputs.action }}"
+        echo "✅ الإجراء الفعلي: ${{ steps.publish_or_update.outputs.final_action }}"
         echo "📄 الملف: ${{ steps.select_post.outputs.post_basename }}"
         echo "📸 صورة: ${{ steps.find_image.outputs.has_image }}"
         
@@ -402,11 +422,7 @@ jobs:
           echo "🖼️  الصورة: $(basename ${{ steps.find_image.outputs.image_file }})"
         fi
         
-        if [ "${{ steps.determine_action.outputs.action }}" == "publish" ]; then
-          echo "🆔 Post ID: ${{ steps.publish_post.outputs.post_id }}"
-        else
-          echo "🆔 Post ID: ${{ steps.determine_action.outputs.existing_post_id }}"
-        fi
+        echo "🆔 Post ID: ${{ steps.publish_or_update.outputs.post_id }}"
         
         echo ""
         echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
